Sunseed/frontend-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunseed-frontend-deployment-green
  namespace: sunseed
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: sunseed-frontend
        image: akhilsurala/sunseed-frontend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
