Sunseed/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunseed-deployment
  namespace: sunseed
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: sunseed-frontend
        image: akhilsurala/sunseed-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
