Sunseed/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunseed-postgres-deployment
  namespace: sunseed
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: akhilsurala/postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-script
          configMap:
            name: postgres-init-script
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
