Sunseed/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunseed-rabbitmq-deployment
  namespace: sunseed
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: akhilsurala/rabbitmq:3.13-management
        ports:
        - containerPort: 5672
