Sunseed/sunseed-simtool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunseed-simtool
  namespace: sunseed
  labels:
    app: simtool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simtool
  template:
    metadata:
      labels:
        app: simtool
    spec:
      serviceAccountName: sunseed-service-account
      containers:
      - name: sunseed-simtool
        image: akhilsurala/sunseed-simtool:latest
        ports:
        - containerPort: 8090
