Sunseed/webtool-authorization.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtool-authorization
  namespace: sunseed
  labels:
    app: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
      - name: webtool-authorization
        image: akhilsurala/webtool-authorization:latest
        ports:
        - containerPort: 8081
