Sunseed/webtool-mailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtool-mailservice
  namespace: sunseed
  labels:
    app: mailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailservice
  template:
    metadata:
      labels:
        app: mailservice
    spec:
      containers:
      - name: webtool-mailservice
        image: akhilsurala/webtool-mailservice:latest
        ports:
        - containerPort: 8082
