Sunseed/webtools-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtools-backend
  namespace: sunseed
  labels:
    app: webtools-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtools-backend
  template:
    metadata:
      labels:
        app: webtools-backend
    spec:
      containers:
      - name: webtool-backend
        image: akhilsurala/webtools-backend:latest
        ports:
        - containerPort: 8080
