Sunseed/frontend-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunseed-frontend-svc-blue
  namespace: sunseed
spec:
  selector:
    app: frontend-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
