Sunseed/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunseed-frontend-svc
  namespace: sunseed
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
