Sunseed/mailservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunseed-mailservice-svc
  namespace: sunseed
spec:
  selector:
    app: mailservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
