Sunseed/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sunseed
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
