Sunseed/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-sunseed-svc
  namespace: sunseed
spec:
  selector:
    app: rabbitmq
  ports:
    - name: managment
      port: 15672   
      targetPort: 15672
  type: ClusterIP
