Sunseed/simtool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunseed-simtool-svc
  namespace: sunseed
spec:
  selector:
    app: simtool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
